refactor my code

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <div class="container">
       <div class="element image"></div>
       <div class="element formulaire">
+        <h1>Sign in form</h1>
+        <p class="paragraphe">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+          ratione cupiditate sed quaerat similique velit architecto culpa aut,
+          nam, enim magni laborum laudantium. Aperiam, cum? Odit similique iure
+          itaque necessitatibus?
+        </p>
         <div class="elementform1">
           <form action="">
             <table>
@@ -64,7 +71,9 @@
         <div>
           <button>Create Account</button>
         </div>
-        <div><p>Already have an account? <a href="#">Log In</a></p></div>
+        <div>
+          <p class="login">Already have an account? <a href="#">Log In</a></p>
+        </div>
       </div>
     </div>
   </body>
