--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="element image"></div>
+      <div class="element image">
+        <div class="logo">logo</div>
+      </div>
       <div class="element formulaire">
         <h1>Sign in form</h1>
         <p class="paragraphe">
