--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
               <tr>
                 <td>
                   <label for="first-name">First Name:</label>
-                  <input type="text" required />
+                  <input type="text" required name="first-name" id="first-name"/>
                 </td>
                 <td>
                   <label for="last-name">Last Name:</label>
-                  <input type="text" required />
+                  <input type="text" required name="last-name" id="last-name"/>
                 </td>
               </tr>
               <tr>
