--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
               <tr>
                 <td>
                   <label for="first-name">First Name:</label>
-                  <input type="text" required name="first-name" id="first-name"/>
+                  <input type="text" required name="first-name" id="first-name" placeholder="first_name" maxlength="245"/>
                 </td>
                 <td>
                   <label for="last-name">Last Name:</label>
-                  <input type="text" required name="last-name" id="last-name"/>
+                  <input type="text" required name="last-name" id="last-name" placeholder="last_name" maxlength="245"/>
                 </td>
               </tr>
               <tr>
                 <td>
                   <label for="email">Email:</label>
-                  <input type="email" name="email" id="email" required />
+                  <input type="email" name="email" id="email" required placeholder="email" maxlength="245"/>
                 </td>
                 <td>
                   <label for="phone">Phone Number:</label>
-                  <input type="tel" name="phone" id="phone" required />
+                  <input type="tel" name="phone" id="phone" required placeholder="tel" maxlength="245"/>
                 </td>
               </tr>
               <tr>
@@ -55,6 +55,8 @@
                     name="password"
                     id="password"
                     required
+                    placeholder="password"
+                    maxlength="245"
                   />
                 </td>
                 <td>
@@ -64,6 +66,8 @@
                     name="password2"
                     id="password2"
                     required
+                    placeholder="confirm password"
+                    maxlength="245"
                   />
                 </td>
               </tr>
