refactor my code

--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
               <tr>
                 <td>
                   <label for="first-name">First Name:</label>
-                  <input type="text" required name="first-name" id="first-name" placeholder="first_name" maxlength="245"/>
+                  <input type="text" required name="first-name" id="first-name" placeholder="Name" maxlength="245"/>
                 </td>
                 <td>
                   <label for="last-name">Last Name:</label>
-                  <input type="text" required name="last-name" id="last-name" placeholder="last_name" maxlength="245"/>
+                  <input type="text" required name="last-name" id="last-name" placeholder="Surname" maxlength="245"/>
                 </td>
               </tr>
               <tr>
                 <td>
                   <label for="email">Email:</label>
-                  <input type="email" name="email" id="email" required placeholder="email" maxlength="245"/>
+                  <input type="email" name="email" id="email" required placeholder="Email" maxlength="245"/>
                 </td>
                 <td>
                   <label for="phone">Phone Number:</label>
-                  <input type="tel" name="phone" id="phone" required placeholder="tel" maxlength="245"/>
+                  <input type="tel" name="phone" id="phone" required placeholder="Tel" maxlength="245"/>
                 </td>
               </tr>
               <tr>
@@ -55,7 +55,7 @@
                     name="password"
                     id="password"
                     required
-                    placeholder="password"
+                    placeholder="Password"
                     maxlength="245"
                   />
                 </td>
@@ -66,7 +66,7 @@
                     name="password2"
                     id="password2"
                     required
-                    placeholder="confirm password"
+                    placeholder="Confirm Password"
                     maxlength="245"
                   />
                 </td>
